--- a/views/styles.css
+++ b/views/styles.css
@@ -1,20 +1,20 @@
-.navbar {
+/* navbar {
     margin-bottom: 20px;
 }
 
 .navbar-dark {
-    background-color: #102233; /* Dark background color */
+    background-color: #102233; 
 }
 
 .navbar-dark .navbar-brand,
 .navbar-dark .navbar-nav .nav-link {
-    color: #ffffff; /* White text color */
+    color: #ffffff; 
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: larger;
 }
 
 .navbar-dark .navbar-toggler-icon {
-    background-color: #ffffff; /* White color for the toggler icon */
+    background-color: #ffffff; 
 }
 
 .navbar ul {
@@ -26,6 +26,8 @@
 
 .navbar li {
     float: left;
+    margin-left: 50px;
+    margin-right: 50px;
 }
 
 .navbar a {
@@ -39,7 +41,7 @@
 .navbar a:hover {
     background-color: #8a72ec;
     color: black;
-}
+}  */
 
 body {
     margin: 0;
@@ -47,19 +49,19 @@ body {
 }
 
 .navbar-nav .nav-item {
-    margin-right: 200px; /* You can adjust this value to control the spacing */
+    margin-right: 200px; 
 }
 
-h1 {
+/* h1 {
     text-align: center;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: beige;
     color: gray;
     margin-top: 50px;
-}
+} */
 
-.form-group{
-    text-align: center;
-    margin: 50px;
+form {
+    margin: 0;
+    padding: 0;
+    border: none;
 }
-
